--- a/Source/CommonNote.App/App.xaml
+++ b/Source/CommonNote.App/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="CommonNote.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="WPF/Windows/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
