--- a/Source/CommonNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/CommonNote.App/WPF/Windows/SettingsWindow.xaml
@@ -11,7 +11,7 @@
 						  xmlns:draw="clr-namespace:System.Drawing;assembly=System.Drawing"
 						  mc:Ignorable="d" 
 		d:DataContext="{d:DesignInstance windows:SettingsWindowViewmodel}"
-		Title="Common Note - Configuration" MinHeight="400" MinWidth="300" Height="400" Width="535">
+		Title="Common Note - Configuration" MinHeight="300" MinWidth="300" Height="550" Width="535">
 	<Window.Resources>
 		<converter:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -22,129 +22,183 @@
 		</Grid.RowDefinitions>
 		<TabControl Grid.Row="0">
 			<TabItem Header="General">
-				<Grid Margin="4">
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto"/>
-						<RowDefinition Height="Auto"/>
-						<RowDefinition Height="Auto"/>
-						<RowDefinition Height="Auto"/>
-						<RowDefinition Height="Auto"/>
-					</Grid.RowDefinitions>
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="Auto"/>
-						<ColumnDefinition Width="50"/>
-						<ColumnDefinition Width="1*"/>
-					</Grid.ColumnDefinitions>
+				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+					<Grid Margin="4">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto"/>
+							<ColumnDefinition Width="50"/>
+							<ColumnDefinition Width="1*"/>
+						</Grid.ColumnDefinitions>
 
-					<TextBlock Grid.Row="0" Grid.Column="0" Text="Storage provider:" VerticalAlignment="Center" />
-					<ComboBox Grid.Row="0" Grid.Column="2" Margin="2" ItemsSource="{Binding AvailableProvider}" SelectedValue="{Binding Settings.NoteProvider}" DisplayMemberPath="DisplayTitleShort" />
+						<TextBlock Grid.Row="0" Grid.Column="0" Text="Storage provider:" VerticalAlignment="Center" />
+						<ComboBox Grid.Row="0" Grid.Column="2" Margin="2" ItemsSource="{Binding AvailableProvider}" SelectedValue="{Binding Settings.NoteProvider}" DisplayMemberPath="DisplayTitleShort" />
 
-					<GroupBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Header="Storage options" Margin="2" MinHeight="100">
-						<ContentControl>
-							<ContentControl.Content>
-								<MultiBinding Converter="{StaticResource CreateGridConv}">
-									<Binding Path="Settings.NoteProvider" />
-									<Binding Path="Settings" />
-								</MultiBinding>
-							</ContentControl.Content>
-						</ContentControl>
-					</GroupBox>
+						<GroupBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Header="Storage options" Margin="2" MinHeight="100">
+							<ContentControl>
+								<ContentControl.Content>
+									<MultiBinding Converter="{StaticResource CreateGridConv}">
+										<Binding Path="Settings.NoteProvider" />
+										<Binding Path="Settings" />
+									</MultiBinding>
+								</ContentControl.Content>
+							</ContentControl>
+						</GroupBox>
 
-					<TextBlock Grid.Row="2" Grid.Column="0" Text="Synchronization frequency:" VerticalAlignment="Center" />
-					<ComboBox Grid.Row="2" Grid.Column="2" Margin="2" ItemsSource="{mext:EnumSource {x:Type settings:ConfigInterval}}" SelectedValue="{Binding Settings.SynchronizationFrequency}" />
+						<TextBlock Grid.Row="2" Grid.Column="0" Text="Synchronization frequency:" VerticalAlignment="Center" />
+						<ComboBox Grid.Row="2" Grid.Column="2" Margin="2" ItemsSource="{mext:EnumSource {x:Type settings:ConfigInterval}}" SelectedValue="{Binding Settings.SynchronizationFrequency}" />
 
-					<GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Header="Connection" Margin="2" Padding="5">
-						<Grid>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-							</Grid.RowDefinitions>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="Auto" MinWidth="150"/>
-								<ColumnDefinition Width="Auto"/>
-								<ColumnDefinition Width="3*"/>
-								<ColumnDefinition Width="Auto"/>
-								<ColumnDefinition Width="1*"/>
-							</Grid.ColumnDefinitions>
+						<GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Header="Connection" Margin="2" Padding="5">
+							<Grid>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" MinWidth="150"/>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="3*"/>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="1*"/>
+								</Grid.ColumnDefinitions>
 
-							<CheckBox  Grid.Row="0" Grid.Column="0"            VerticalAlignment="Center" Content="Use proxy" IsChecked="{Binding Settings.ProxyEnabled}" />
-							<TextBlock Grid.Row="0" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Host:" />
-							<TextBox   Grid.Row="0" Grid.Column="2" Margin="3" Text="{Binding Settings.ProxyHost}" />
-							<TextBlock Grid.Row="0" Grid.Column="3" Margin="3" VerticalAlignment="Center" Text="Port:" />
-							<TextBox   Grid.Row="0" Grid.Column="4" Margin="3" Text="{Binding Settings.ProxyPort}" />
+								<CheckBox  Grid.Row="0" Grid.Column="0"            VerticalAlignment="Center" Content="Use proxy" IsChecked="{Binding Settings.ProxyEnabled}" />
+								<TextBlock Grid.Row="0" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Host:" />
+								<TextBox   Grid.Row="0" Grid.Column="2" Margin="3" Text="{Binding Settings.ProxyHost}" />
+								<TextBlock Grid.Row="0" Grid.Column="3" Margin="3" VerticalAlignment="Center" Text="Port:" />
+								<TextBox   Grid.Row="0" Grid.Column="4" Margin="3" Text="{Binding Settings.ProxyPort}" />
 
-							<Rectangle Grid.Row="1" Grid.Column="0" Margin="0,5" Grid.ColumnSpan="5" Height="2" Fill="LightGray" />
+								<Rectangle Grid.Row="1" Grid.Column="0" Margin="0,5" Grid.ColumnSpan="5" Height="2" Fill="LightGray" />
 
-							<TextBlock Grid.Row="3" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Login (optional)" />
-
-							<TextBlock Grid.Row="3" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Username:" />
-							<TextBox   Grid.Row="3" Grid.Column="2" Margin="3" Grid.ColumnSpan="3" Text="{Binding Settings.ProxyUsername}" />
-
-							<TextBlock Grid.Row="4" Grid.Column="1" Margin="3" Text="Password:" VerticalAlignment="Center" />
-							<controls:BindablePasswordBox Grid.Row="4" Grid.Column="2" Margin="3" Grid.ColumnSpan="3" Password="{Binding Settings.ProxyPassword}" />
-						</Grid>
-					</GroupBox>
-				</Grid>
+								<TextBlock Grid.Row="3" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Login (optional)" />
+								<TextBlock Grid.Row="3" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Username:" />
+								<TextBox   Grid.Row="3" Grid.Column="2" Margin="3" Grid.ColumnSpan="3" Text="{Binding Settings.ProxyUsername}" />
+								<TextBlock Grid.Row="4" Grid.Column="1" Margin="3" Text="Password:" VerticalAlignment="Center" />
+								<controls:BindablePasswordBox Grid.Row="4" Grid.Column="2" Margin="3" Grid.ColumnSpan="3" Password="{Binding Settings.ProxyPassword}" />
+							</Grid>
+						</GroupBox>
+					</Grid>
+				</ScrollViewer>
 			</TabItem>
 			<TabItem Header="View">
-				<StackPanel Orientation="Vertical">
-					<GroupBox Header="Font" Padding="4">
-						<Grid>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition/>
-							</Grid.RowDefinitions>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="Auto" MinWidth="100"/>
-								<ColumnDefinition Width="2*"/>
-								<ColumnDefinition Width="1*"/>
-								<ColumnDefinition Width="1*"/>
-							</Grid.ColumnDefinitions>
+				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+					<StackPanel Orientation="Vertical">
+						<GroupBox Header="Main" Padding="4">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="1*" />
+								</Grid.ColumnDefinitions>
+								<StackPanel Grid.Column="0">
+									<CheckBox Margin="2" Content="Minimize to Tray" IsChecked="{Binding Settings.MinimizeToTray}" />
+								</StackPanel>
+								<StackPanel Grid.Column="1">
+									<CheckBox Margin="2" Content="Close to Tray" IsChecked="{Binding Settings.CloseToTray}" />
+								</StackPanel>
+							</Grid>
+						</GroupBox>
+						<GroupBox Header="Font" Padding="4">
+							<Grid>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition/>
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" MinWidth="100"/>
+									<ColumnDefinition Width="2*"/>
+									<ColumnDefinition Width="1*"/>
+									<ColumnDefinition Width="1*"/>
+								</Grid.ColumnDefinitions>
 
-							<TextBlock Margin="2" Grid.Row="2" Grid.Column="0" Text="Title:" VerticalAlignment="Center" />
-							<ComboBox  Margin="2" Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Source={x:Static draw:FontFamily.Families}, Mode=OneTime}" DisplayMemberPath="Name" SelectedValue="{Binding TitleFontName}" />
-							<ComboBox  Margin="2" Grid.Row="2" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding TitleFontModifier}"/>
-							<ComboBox  Margin="2" Grid.Row="2" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding TitleFontSize}"/>
+								<TextBlock Margin="2" Grid.Row="2" Grid.Column="0" Text="Title:" VerticalAlignment="Center" />
+								<ComboBox  Margin="2" Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Source={x:Static draw:FontFamily.Families}, Mode=OneTime}" DisplayMemberPath="Name" SelectedValue="{Binding Settings.TitleFontName}" />
+								<ComboBox  Margin="2" Grid.Row="2" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding Settings.TitleFontModifier}"/>
+								<ComboBox  Margin="2" Grid.Row="2" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding Settings.TitleFontSize}"/>
 
-							<TextBlock Margin="2" Grid.Row="0" Grid.Column="0" Text="Note:" VerticalAlignment="Center" />
-							<ComboBox  Margin="2" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Source={x:Static draw:FontFamily.Families}, Mode=OneTime}" DisplayMemberPath="Name" SelectedValue="{Binding NoteFontName}" />
-							<ComboBox  Margin="2" Grid.Row="0" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding NoteFontModifier}"/>
-							<ComboBox  Margin="2" Grid.Row="0" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding NoteFontSize}"/>
+								<TextBlock Margin="2" Grid.Row="0" Grid.Column="0" Text="Note:" VerticalAlignment="Center" />
+								<ComboBox  Margin="2" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Source={x:Static draw:FontFamily.Families}, Mode=OneTime}" DisplayMemberPath="Name" SelectedValue="{Binding Settings.NoteFontName}" />
+								<ComboBox  Margin="2" Grid.Row="0" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding Settings.NoteFontModifier}"/>
+								<ComboBox  Margin="2" Grid.Row="0" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding Settings.NoteFontSize}"/>
 
-							<TextBlock Margin="2" Grid.Row="1" Grid.Column="0" Text="List:" VerticalAlignment="Center" />
-							<ComboBox  Margin="2" Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Source={x:Static draw:FontFamily.Families}, Mode=OneTime}" DisplayMemberPath="Name" SelectedValue="{Binding ListFontName}" />
-							<ComboBox  Margin="2" Grid.Row="1" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding ListFontModifier}"/>
-							<ComboBox  Margin="2" Grid.Row="1" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding ListFontSize}"/>
+								<TextBlock Margin="2" Grid.Row="1" Grid.Column="0" Text="List:" VerticalAlignment="Center" />
+								<ComboBox  Margin="2" Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Source={x:Static draw:FontFamily.Families}, Mode=OneTime}" DisplayMemberPath="Name" SelectedValue="{Binding Settings.ListFontName}" />
+								<ComboBox  Margin="2" Grid.Row="1" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding Settings.ListFontModifier}"/>
+								<ComboBox  Margin="2" Grid.Row="1" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding Settings.ListFontSize}"/>
 							
-						</Grid>
-					</GroupBox>
-					<GroupBox Header="Scintilla" Padding="4">
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="1*" />
-								<ColumnDefinition Width="1*" />
-							</Grid.ColumnDefinitions>
-							<StackPanel Grid.Column="0">
-								<CheckBox Margin="2" Content="Display Line numbers" />
-								<CheckBox Margin="2" Content="Highlight current line" />
-								<CheckBox Margin="2" Content="Enable rectangular selection" />
-							</StackPanel>
-							<StackPanel Grid.Column="1">
-								<CheckBox Margin="2" Content="Word wrap" />
-								<CheckBox Margin="2" Content="Show Whitespaces" />
-								<CheckBox Margin="2" Content="Show EOL" />
-							</StackPanel>
-						</Grid>
-					</GroupBox>
-				</StackPanel>
+							</Grid>
+						</GroupBox>
+						<GroupBox Header="Scintilla" Padding="4">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="1*" />
+								</Grid.ColumnDefinitions>
+								<StackPanel Grid.Column="0">
+									<CheckBox Margin="2" Content="Display Line numbers" IsChecked="{Binding Settings.SciLineNumbers}" />
+									<CheckBox Margin="2" Content="Enable rectangular selection" IsChecked="{Binding Settings.SciRectSelection}" />
+								</StackPanel>
+								<StackPanel Grid.Column="1">
+									<CheckBox Margin="2" Content="Word wrap" IsChecked="{Binding Settings.SciWordWrap}" />
+									<CheckBox Margin="2" Content="Show Whitespaces" IsChecked="{Binding Settings.SciShowWhitespace}" />
+									<CheckBox Margin="2" Content="Show EOL" IsChecked="{Binding Settings.SciShowEOL}" />
+								</StackPanel>
+							</Grid>
+						</GroupBox>
+						<GroupBox Header="Startup" Padding="4">
+							<Grid>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" MinWidth="150"/>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="1*"/>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="1*"/>
+								</Grid.ColumnDefinitions>
+
+								<CheckBox Grid.Row="0" Grid.Column="0" Margin="3" VerticalAlignment="Center" Content="Start with windows" />
+								
+								<TextBlock Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Startup" />
+								
+								<TextBlock Grid.Row="1" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Window position" />
+								<TextBox   Grid.Row="1" Grid.Column="2" Margin="3" Text="{Binding Settings.StartupPositionX}" />
+								<TextBox   Grid.Row="1" Grid.Column="4" Margin="3" Text="{Binding Settings.StartupPositionY}" />
+
+								<TextBlock Grid.Row="2" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Window size" />
+								<TextBox   Grid.Row="2" Grid.Column="2" Margin="3" Text="{Binding Settings.StartupPositionWidth}" />
+								<TextBox   Grid.Row="2" Grid.Column="4" Margin="3" Text="{Binding Settings.StartupPositionHeight}" />
+
+								<TextBlock Grid.Row="3" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="Window state" />
+								<ComboBox  Grid.Row="3" Grid.Column="2" Margin="3" ItemsSource="{mext:EnumSource WindowState}" SelectedValue="{Binding Settings.StartupState}" />
+								<ComboBox  Grid.Row="3" Grid.Column="4" Margin="3" ItemsSource="{mext:EnumSource WindowStartupLocation}" SelectedValue="{Binding Settings.StartupLocation}" />
+
+								<Button Grid.Row="4" Grid.Column="2" Margin="3" Grid.ColumnSpan="3" Content="Use current" Command="{Binding InsertCurrentWindowStateCommand}" />
+								
+							</Grid>
+						</GroupBox>
+					</StackPanel>
+				</ScrollViewer>
 			</TabItem>
 			<TabItem Header="Remote Encryption">
+				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
 
+				</ScrollViewer>
 			</TabItem>
 		</TabControl>
 
